Fix margins and spacing issues

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -42,10 +42,6 @@ section {
   }
 }
 
-.services section {
-  margin-inline: $section__margin-inline-alt;
-}
-
 img {
   display: block;
   user-select: none;
