--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,7 +3,6 @@
 header {
   max-width: 100vw;
   overflow: hidden;
-  box-shadow: 0px 0px 10px rgb(0 0 0 / 0.18);
 
   .header__img {
     margin-top: 2rem;
