--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -2,16 +2,14 @@
 
 .contact {
   @include flexCenterColumn;
-  margin-top: -1rem;
-  margin-bottom: 3rem;
+  margin-bottom: 4rem;
 
   @include mqSmall {
     margin-bottom: 1rem;
-  }
 
-  h1,
-  h2 {
-    margin-bottom: 2rem;
+    h1 {
+      margin-top: -1rem;
+    }
   }
 }
 
@@ -19,11 +17,13 @@
 .cta__question-contact {
   width: max-content;
   margin-inline: auto;
-  margin-bottom: 2rem;
+  margin-block: 4.5rem 4rem;
   gap: 0.6rem;
 
   @include mqSmall {
     @include flexCenterColumn;
+    margin-block: 2rem 2.5rem;
+
     gap: 0.75rem;
   }
 
@@ -54,7 +54,7 @@
   box-shadow: $card-shadow;
 
   @include mqMedium {
-    width: 80vw;
+    width: calc(3rem + 80vw);
   }
 
   @include mqSmall {
